--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+appsettings.json
+Google.Apis.Auth.OAuth2.Responses.TokenResponse-user
+client_secret.json
+
 # User-specific files
 *.rsuser
 *.suo
