--- a/PortalDoFranqueadoAPI/appsettings.json
+++ b/PortalDoFranqueadoAPI/appsettings.json
@@ -13,7 +13,7 @@
     "FotosFolderId": "1UyZAduT5hyG-XqVOSK4pncs0kZf58hBV"
   },
   "ConnectionStrings": {
-    "Default": "Server=bro-franqueados.c7voeto6mtcn.us-east-2.rds.amazonaws.com;Database=portal_dev;Uid=bpfmaster;Pwd=bmk0paTqub1UH9UpihLY;",
-    "SQLServer": "Server=brothers.c7voeto6mtcn.us-east-2.rds.amazonaws.com;Database=portal_dev;Uid=admin;Pwd=8rKS2vTJDOuvUF88Bs8U;"
+    "MySQL": "Server=bro-franqueados.c7voeto6mtcn.us-east-2.rds.amazonaws.com;Database=portal_dev;Uid=bpfmaster;Pwd=bmk0paTqub1UH9UpihLY;",
+    "Default": "Server=brothers.c7voeto6mtcn.us-east-2.rds.amazonaws.com;Database=portalfranqueados_prod;Uid=admin;Pwd=8rKS2vTJDOuvUF88Bs8U;"
   }
 }
