Change to use SQL Server

--- a/PortalDoFranqueadoGUI/appsettings.json
+++ b/PortalDoFranqueadoGUI/appsettings.json
@@ -1,6 +1,5 @@
 {
   "api": {
-    "url": "https://v87ne9roxk.execute-api.us-east-2.amazonaws.com/Prod",
-    "url2": "https://localhost:44319/api/"
+    "url": "https://localhost:7050/api/"
   }
 }
