--- a/PortalDoFranqueadoAPI/appsettings.json
+++ b/PortalDoFranqueadoAPI/appsettings.json
@@ -14,6 +14,7 @@
   },
   "ConnectionStrings": {
     "MySQL": "Server=bro-franqueados.c7voeto6mtcn.us-east-2.rds.amazonaws.com;Database=portal_dev;Uid=bpfmaster;Pwd=bmk0paTqub1UH9UpihLY;",
-    "Default": "Server=brothers.c7voeto6mtcn.us-east-2.rds.amazonaws.com;Database=portalfranqueados_prod;Uid=admin;Pwd=8rKS2vTJDOuvUF88Bs8U;"
+    "Default": "Server=brothers.c7voeto6mtcn.us-east-2.rds.amazonaws.com;Database=portalfranqueados_prod;Uid=admin;Pwd=8rKS2vTJDOuvUF88Bs8U;",
+    "Default1": "Server=localhost;Database=portalfranqueados_dev;Uid=sa;Pwd=q1W@;"
   }
 }
