--- a/PortalDoFranqueadoAPI/appsettings.json
+++ b/PortalDoFranqueadoAPI/appsettings.json
@@ -10,11 +10,14 @@
     "SecretToken": "9ce0fe88-f679-447b-9d36-e6b5fca336ba",
     "GoogleDriveApplication": "BROTHERS - Franqueados",
     "ApoioFolderId": "1hVLs7wt-nBap1S2UW5WtbXark2QLYnaL",
-    "FotosFolderId": "1UyZAduT5hyG-XqVOSK4pncs0kZf58hBV"
+    "FotosFolderId": "1UyZAduT5hyG-XqVOSK4pncs0kZf58hBV",
+    "AuxiliaryApoioId": 1,
+    "AuxiliaryFotosId": 2,
+    "ResetPasswordAttempts": 3
   },
   "ConnectionStrings": {
     "MySQL": "Server=bro-franqueados.c7voeto6mtcn.us-east-2.rds.amazonaws.com;Database=portal_dev;Uid=bpfmaster;Pwd=bmk0paTqub1UH9UpihLY;",
     "Default1": "Server=brothers.c7voeto6mtcn.us-east-2.rds.amazonaws.com;Database=portalfranqueados_prod;Uid=admin;Pwd=8rKS2vTJDOuvUF88Bs8U;",
     "Default": "Server=localhost;Database=portalfranqueados_dev;Uid=sa;Pwd=q1W@;"
-  }
+  },
 }
