--- a/PortalDoFranqueadoGUI/PortalDoFranqueadoGUI.csproj
+++ b/PortalDoFranqueadoGUI/PortalDoFranqueadoGUI.csproj
@@ -20,6 +20,7 @@
     <None Remove="Media\fotos.png~RF26a61560.TMP" />
     <None Remove="Media\logo-01.png" />
     <None Remove="Media\logo-02.png" />
+    <None Remove="Media\logout.png" />
     <None Remove="Media\media.png" />
     <None Remove="Media\previsao-de-pedido.png" />
     <None Remove="Media\previsao.png" />
@@ -46,6 +47,9 @@
     <Content Include="Media\logo-02.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Media\logout.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Media\media.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -62,15 +66,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Google.Apis.Drive.v2" Version="1.55.0.2566" />
-    <PackageReference Include="Google.Apis.Drive.v3" Version="1.55.0.2566" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
+    <PackageReference Include="MimeTypeMapOfficial" Version="1.0.17" />
     <PackageReference Include="MvvmLightLibs" Version="5.4.1.1" />
     <PackageReference Include="NuGet.CommandLine" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Ookii.Dialogs.Wpf" Version="5.0.1" />
     <PackageReference Include="squirrel.windows" Version="1.9.0" />
     <PackageReference Include="System.ObjectModel" Version="4.3.0" />
   </ItemGroup>
