--- a/PortalDoFranqueadoAPI/appsettings.json
+++ b/PortalDoFranqueadoAPI/appsettings.json
@@ -16,8 +16,7 @@
     "ResetPasswordAttempts": 3
   },
   "ConnectionStrings": {
-    "MySQL": "Server=bro-franqueados.c7voeto6mtcn.us-east-2.rds.amazonaws.com;Database=portal_dev;Uid=bpfmaster;Pwd=bmk0paTqub1UH9UpihLY;",
-    "Default1": "Server=brothers.c7voeto6mtcn.us-east-2.rds.amazonaws.com;Database=portalfranqueados_prod;Uid=admin;Pwd=8rKS2vTJDOuvUF88Bs8U;",
-    "Default": "Server=localhost;Database=portalfranqueados_dev;Uid=sa;Pwd=q1W@;"
+    "Default1": "Server=localhost;Database=portalfranqueados_dev;Uid=sa;Pwd=q1W@;Timeout=600000",
+    "Default": "Server=brothers.database.windows.net;Database=brothers_franq;Uid=brothers;Pwd=Bro#q1w2;Timeout=600000"
   },
 }
