--- a/PortalDoFranqueadoGUI/PortalDoFranqueadoGUI.csproj
+++ b/PortalDoFranqueadoGUI/PortalDoFranqueadoGUI.csproj
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <StartupObject>PortalDoFranqueadoGUI.App</StartupObject>
-    <Version>0.0.1</Version>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -41,6 +41,7 @@
     <Content Include="Media\fotos.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Media\icon_full.ico" />
     <Content Include="Media\logo-01.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -83,16 +84,26 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Media\LogoReduzida.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Properties\" />
+    <Folder Include="Resources\" />
   </ItemGroup>
 
   <PropertyGroup>
 	<NugetTools>$(PkgNuGet_CommandLine)\tools</NugetTools>
 	<SquirrelTools>$(Pkgsquirrel_windows)\tools</SquirrelTools>
 	<NuspecFile>$(SolutionDir)\PortalDoFranqueadoGUI\ReleaseSpec.nuspec</NuspecFile>
+	<ApplicationIcon>Media\icon_full.ico</ApplicationIcon>
+	<Authors>Regis Antunes</Authors>
+	<Product>BROTHERS - Portal do Franqueado</Product>
+	<Description>Central de comunicação com franqueados.</Description>
+	<PackageIcon>LogoReduzida.png</PackageIcon>
   </PropertyGroup>
 
   <Target Name="GenerateRelease" AfterTargets="AfterBuild" Condition="$(Configuration) == Release">
