--- a/PortalDoFranqueadoGUI/ReleaseSpec.nuspec
+++ b/PortalDoFranqueadoGUI/ReleaseSpec.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>PortalDoFranqueado</id>
-    <version>0.0.1</version>
+    <version>1.0.0</version>
     <title>BROTHERS - Portal do Franqueado</title>
     <authors>Regis Antunes</authors>
     <owners>BROTHERS</owners>
@@ -11,6 +11,6 @@
   </metadata>
   
   <files>
-	<file src="bin\Release\net6.0-windows\**" target="lib\net45"/>
+	<file src="bin\Release\publish\win-x86\**" target="lib\net45" exclude="*.pdb;*.vshost.*"/>
   </files>
 </package>
