--- a/PortalDoFranqueadoAPI/appsettings.json
+++ b/PortalDoFranqueadoAPI/appsettings.json
@@ -16,7 +16,6 @@
     "ResetPasswordAttempts": 3
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost;Database=portalfranqueados_dev;Uid=sa;Pwd=q1W@;Timeout=600000",
-    "Default1": "Server=brothers.database.windows.net;Database=brothers_franq;Uid=brothers;Pwd=Bro#q1w2;Timeout=600000"
-  },
+    "Default": "Server=localhost;Database=portalfranqueados_dev;Uid=sa;Pwd=q1W@;Timeout=600000"
+  }
 }
