--- a/PortalDoFranqueadoGUI/PortalDoFranqueadoGUI.csproj
+++ b/PortalDoFranqueadoGUI/PortalDoFranqueadoGUI.csproj
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <StartupObject>PortalDoFranqueadoGUI.App</StartupObject>
-    <Version>1.0.2</Version>
+    <Version>1.0.4</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -67,8 +67,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspose.Imaging" Version="22.3.0" />
-    <PackageReference Include="Aspose.Zip" Version="22.3.0" />
+    <PackageReference Include="Aspose.PDF" Version="22.3.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
     <PackageReference Include="MimeTypeMapOfficial" Version="1.0.17" />
