Fix generate excel on publish application and improvments on download files

--- a/PortalDoFranqueadoAPI/appsettings.json
+++ b/PortalDoFranqueadoAPI/appsettings.json
@@ -8,14 +8,11 @@
   "AllowedHosts": "*",
   "AppSettings": {
     "SecretToken": "9ce0fe88-f679-447b-9d36-e6b5fca336ba",
-    "GoogleDriveApplication": "BROTHERS - Franqueados",
-    "ApoioFolderId": "1hVLs7wt-nBap1S2UW5WtbXark2QLYnaL",
-    "FotosFolderId": "1UyZAduT5hyG-XqVOSK4pncs0kZf58hBV",
     "AuxiliaryApoioId": 1,
     "AuxiliaryFotosId": 2,
     "ResetPasswordAttempts": 3
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost;Database=portalfranqueados_dev;Uid=sa;Pwd=q1W@;Timeout=600000"
+    "Default": "Server=brothers.database.windows.net;Database=brothers_franq;Uid=brothers;Pwd=Bro#q1w2;Timeout=600000"
   }
 }
