--- a/PortalDoFranqueado.Export/PortalDoFranqueado.Export.csproj
+++ b/PortalDoFranqueado.Export/PortalDoFranqueado.Export.csproj
@@ -8,26 +8,10 @@
     <StartupObject>PortalDoFranqueado.Export.Program</StartupObject>
   </PropertyGroup>
 
-	<ItemGroup>
-		<COMReference Include="Microsoft.Office.Interop.Excel">
-			<WrapperTool>tlbimp</WrapperTool>
-			<VersionMinor>7</VersionMinor>
-			<VersionMajor>1</VersionMajor>
-			<Guid>00020813-0000-0000-c000-000000000046</Guid>
-			<Lcid>0</Lcid>
-			<Isolated>false</Isolated>
-			<EmbedInteropTypes>true</EmbedInteropTypes>
-		</COMReference>
-		<COMReference Include="Microsoft.Office.Core">
-		  <WrapperTool>tlbimp</WrapperTool>
-		  <VersionMinor>5</VersionMinor>
-		  <VersionMajor>2</VersionMajor>
-		  <Guid>2df8d04c-5bfa-101b-bde5-00aa0044de52</Guid>
-		  <Lcid>0</Lcid>
-		  <Isolated>false</Isolated>
-		  <EmbedInteropTypes>true</EmbedInteropTypes>
-		</COMReference>
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1000" />
+    <PackageReference Include="MicrosoftOfficeCore" Version="15.0.0" />
+  </ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\PortalDoFranqueado.Model\PortalDoFranqueado.Model.csproj" />
