Remove global usings and change to get azure app settings

--- a/PortalDoFranqueadoAPI/appsettings.json
+++ b/PortalDoFranqueadoAPI/appsettings.json
@@ -13,6 +13,6 @@
     "ResetPasswordAttempts": 3
   },
   "ConnectionStrings": {
-    "Default": "Server=brothers.database.windows.net;Database=brothers_franq;Uid=brothers;Pwd=Bro#q1w2;Timeout=600000"
+    "Default": "Server=localhost;Database=portalfranqueados_dev;Uid=sa;Pwd=q1W@;Timeout=600000"
   }
 }
