Improvements on image view

--- a/PortalDoFranqueadoGUI/appsettings.json
+++ b/PortalDoFranqueadoGUI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "api": {
-    "url1": "https://localhost:7050/api/",
-    "url": "https://brothers-portaldosfranqueados.azurewebsites.net/api/"
+    "url": "https://localhost:7050/api/",
+    "url1": "https://brothers-portaldosfranqueados.azurewebsites.net/api/"
   }
 }
