--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,7 @@
 csharp_prefer_braces = false:silent
 
 # IDE0008: Usar o tipo explícito
-csharp_style_var_elsewhere = false
+csharp_style_var_elsewhere = true
 csharp_indent_labels = one_less_than_current
 csharp_using_directive_placement = outside_namespace:silent
 csharp_prefer_simple_using_statement = true:suggestion
