Small code adjusts

--- a/PortalDoFranqueadoAPI/appsettings.json
+++ b/PortalDoFranqueadoAPI/appsettings.json
@@ -13,6 +13,6 @@
     "ResetPasswordAttempts": 3
   },
   "ConnectionStrings": {
-    "Default": "Data Source=tcp:brothers.database.windows.net,1433;Initial Catalog=brothers_franq;User Id=brothers@brothers;Password=Bro#q1w2"
+    "Default": "Server=localhost;Database=portalfranqueados_dev;Uid=sa;Pwd=q1W@;Timeout=600000"
   }
 }
